// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileSlug given an authenticated user given another profile user and badges are disabled renders 1`] = `
<div>
  <div>
    <div
      class="ds-space"
      style="margin-bottom: 32px;"
    />
     
    <div
      class="ds-flex"
      style="margin-left: -12px; margin-right: -12px;"
    >
      <div
        class="ds-flex-item"
        style="flex-basis: 100%; width: 100%; padding-left: 12px; padding-right: 12px; margin-bottom: 24px;"
      >
        <article
          class="base-card"
          style="position: relative; height: auto; overflow: visible;"
        >
          <div
            class="profile-page-avatar profile-avatar --large --no-image"
          >
            <span
              class="initials"
            >
              BTB
            </span>
             
            <!---->
             
            <!---->
          </div>
           
          <client-only-stub>
            <v-popover-stub
              autohide="true"
              class="content-menu user-content-menu"
              container="body"
              delay="0"
              handleresize="true"
              offset="5"
              openclass="open"
              opengroup="0"
              placement="bottom-end"
              popoverarrowclass="tooltip-arrow popover-arrow"
              popoverbaseclass="tooltip popover"
              popoverclass="vue-popover-theme"
              popoverinnerclass="tooltip-inner popover-inner"
              popoverwrapperclass="wrapper"
              popperoptions="[object Object]"
              trigger="manual"
            >
              <button
                aria-label="actions.menu"
                class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
                data-appearance="outline"
                data-test="content-menu-button"
                data-variant="primary"
                type="button"
              >
                <span
                  class="inline-flex items-center"
                >
                  <span
                    class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <span
                      aria-hidden="true"
                      class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                    >
                      <svg
                        fill="currentColor"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16 6c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 14c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 22c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </button>
               
              <div>
                <div
                  class="content-menu-popover"
                >
                  <nav
                    class="ds-menu"
                  >
                    <ul
                      class="ds-menu-list"
                    >
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          exact="true"
                          to="/"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            report.user.title
          
                        </router-link-stub>
                        <!---->
                      </li>
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          exact="true"
                          to="/"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            disable.user.title
          
                        </router-link-stub>
                        <!---->
                      </li>
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          exact="true"
                          to="/"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            settings.muted-users.mute
          
                        </router-link-stub>
                        <!---->
                      </li>
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          exact="true"
                          to="/"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            settings.blocked-users.block
          
                        </router-link-stub>
                        <!---->
                      </li>
                    </ul>
                  </nav>
                </div>
              </div>
            </v-popover-stub>
          </client-only-stub>
           
          <div
            class="ds-space"
            style="margin-top: 16px; margin-bottom: 16px;"
          >
            <h3
              class="ds-heading ds-heading-h3 ds-heading-align-center ds-heading-no-margin"
            >
              
            Bob the builder
          
            </h3>
             
            <p
              class="ds-text ds-text-soft ds-text-center"
            >
              
            @undefined
          
            </p>
             
            <div
              class="location-info size-small"
            >
              <div
                class="location"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 3c4.959 0 9 4.042 9 9 0 1.406-0.57 3.020-1.344 4.781s-1.77 3.631-2.781 5.375c-2.023 3.488-4.063 6.406-4.063 6.406l-0.813 1.188-0.813-1.188s-2.039-2.918-4.063-6.406c-1.012-1.744-2.007-3.613-2.781-5.375s-1.344-3.375-1.344-4.781c0-4.958 4.041-9 9-9zM16 5c-3.877 0-7 3.123-7 7 0 0.803 0.43 2.316 1.156 3.969s1.73 3.484 2.719 5.188c1.572 2.71 2.546 4.144 3.125 5 0.579-0.856 1.553-2.29 3.125-5 0.988-1.704 1.993-3.535 2.719-5.188s1.156-3.166 1.156-3.969c0-3.877-3.122-7-7-7zM16 10c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
                    />
                  </svg>
                </span>
                
    Berlin
  
              </div>
               
              <div
                class="distance"
              >
                
    location.distance
  
              </div>
            </div>
             
            <p
              class="ds-text ds-text-size-small ds-text-soft ds-text-center"
            >
              
            profile.memberSince 
          
            </p>
          </div>
           
          <!---->
           
          <div
            class="ds-flex"
          >
            <div
              class="ds-flex-item"
              style="flex-grow: 1; flex-shrink: 0; flex-basis: 0px;"
            >
              <client-only-stub>
                <div
                  class="ds-number ds-number-size-x-large"
                >
                  <p
                    class="ds-text ds-number-count ds-text-size-x-large"
                    style="margin-bottom: 0px;"
                  >
                    <span>
                      <client-only-stub
                        placeholder="0"
                        tag="span"
                      >
                        <span>
                          
  0

                        </span>
                      </client-only-stub>
                    </span>
                  </p>
                  <p
                    class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                  >
                    
    profile.followers
  
                  </p>
                </div>
              </client-only-stub>
            </div>
             
            <div
              class="ds-flex-item"
              style="flex-grow: 1; flex-shrink: 0; flex-basis: 0px;"
            >
              <client-only-stub>
                <div
                  class="ds-number ds-number-size-x-large"
                >
                  <p
                    class="ds-text ds-number-count ds-text-size-x-large"
                    style="margin-bottom: 0px;"
                  >
                    <span>
                      <client-only-stub
                        placeholder="0"
                        tag="span"
                      >
                        <span>
                          
  0

                        </span>
                      </client-only-stub>
                    </span>
                  </p>
                  <p
                    class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                  >
                    
    profile.following
  
                  </p>
                </div>
              </client-only-stub>
            </div>
          </div>
           
          <div
            class="action-buttons"
          >
            <!---->
             
            <!---->
             
            <button
              class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[36px] min-w-[36px] px-[16px] py-0 text-[15px] leading-[normal] rounded-[5px] align-middle w-full border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)]"
              data-appearance="outline"
              data-test="follow-btn"
              data-variant="primary"
              type="button"
            >
              <span
                class="inline-flex items-center gap-2"
              >
                <span
                  class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current -ml-1"
                >
                  <span
                    class="base-icon"
                  >
                    <!---->
                  </span>
                </span>
                
  followButton.follow

              </span>
            </button>
             
            <button
              class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[36px] min-w-[36px] px-[16px] py-0 text-[15px] leading-[normal] rounded-[5px] align-middle w-full border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] has-tooltip"
              data-appearance="outline"
              data-original-title="null"
              data-variant="primary"
              type="button"
            >
              <span
                class="inline-flex items-center gap-2"
              >
                <span
                  class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current -ml-1"
                >
                  <span
                    aria-hidden="true"
                    class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <svg
                      fill="currentColor"
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.23,24.91A9,9,0,0,0,22.44,9.52,8.57,8.57,0,0,0,21,9.41a8.94,8.94,0,0,0-8.92,10.14c0,.1,0,.2,0,.29a9,9,0,0,0,.22,1l0,.11a8.93,8.93,0,0,0,.38,1l.13.28a9,9,0,0,0,.45.83l.07.14a9.13,9.13,0,0,1-2.94-.36,1,1,0,0,0-.68,0L7,24.13l.54-1.9a1,1,0,0,0-.32-1,9,9,0,0,1,11.27-14,1,1,0,0,0,1.23-1.58A10.89,10.89,0,0,0,13,3.25a11,11,0,0,0-7.5,19l-1,3.34A1,1,0,0,0,5.9,26.82l4.35-1.93a11,11,0,0,0,4.68.16A9,9,0,0,0,21,27.41a8.81,8.81,0,0,0,2.18-.27l3.41,1.52A1,1,0,0,0,28,27.48Zm-1.77-1.1a1,1,0,0,0-.32,1L25.45,26l-1.79-.8a1,1,0,0,0-.41-.09,1,1,0,0,0-.29,0,6.64,6.64,0,0,1-2,.29,7,7,0,0,1,0-14,6.65,6.65,0,0,1,1.11.09,7,7,0,0,1,3.35,12.31Z"
                      />
                      <path
                        d="M17.82 17.08H17a1 1 0 0 0 0 2h.82a1 1 0 0 0 0-2zM21.41 17.08h-.82a1 1 0 0 0 0 2h.82a1 1 0 0 0 0-2zM25 17.08h-.82a1 1 0 0 0 0 2H25a1 1 0 0 0 0-2z"
                      />
                    </svg>
                  </span>
                </span>
                
            chat.userProfileButton.label
          
              </span>
            </button>
          </div>
           
          <!---->
           
          <!---->
        </article>
         
        <div
          class="ds-space"
          style="margin-bottom: 32px;"
        />
         
        <h3
          class="ds-heading ds-heading-h3 ds-heading-soft"
          style="text-align: center; margin-bottom: 10px;"
        >
          
        profile.network.title
      
        </h3>
         
        <follow-list-stub
          type="followedBy"
          user="[object Object]"
        />
         
        <div
          class="ds-space"
          style="margin-bottom: 32px;"
        />
         
        <follow-list-stub
          type="following"
          user="[object Object]"
        />
         
        <!---->
      </div>
       
      <div
        class="ds-flex-item"
        style="flex-basis: 100%; width: 100%; padding-left: 12px; padding-right: 12px; margin-bottom: 24px;"
      >
        <div
          class="ds-grid"
          style="grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); grid-auto-rows: 20px;"
        >
          <div
            class="tab-navigation"
            style="grid-row-end: span 3; grid-column-start: 1; grid-column-end: -1;"
          >
            <article
              class="ds-tab-nav base-card"
            >
              <ul
                class="Tabs"
              >
                <li
                  class="Tabs__tab pointer --active"
                  data-test="post-tab"
                >
                  <a
                    data-test="post-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    common.post
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
                <li
                  class="Tabs__tab pointer"
                  data-test="comment-tab"
                >
                  <a
                    data-test="comment-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    profile.commented
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
                <li
                  class="Tabs__tab pointer"
                  data-test="shout-tab"
                >
                  <a
                    data-test="shout-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    profile.shouted
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
              </ul>
               
              <!---->
            </article>
          </div>
           
          <!---->
           
          <div
            style="grid-row-end: span 4; grid-column-start: 1; grid-column-end: -1;"
          >
            <div>
              <div
                class="ds-space hc-empty ds-space-centered"
                style="margin-top: 64px; margin-bottom: 64px;"
              >
                <p
                  class="ds-text"
                >
                  <img
                    alt="Empty"
                    class="hc-empty-icon"
                    src="/img/empty/file.svg"
                    style="margin-bottom: 5px;"
                    width="80"
                  />
                   
                  <br />
                   
                  <span
                    class="ds-text hc-empty-message ds-text-softer ds-text-inline"
                    style="display: none;"
                  >
                    
        
      
                  </span>
                </p>
              </div>
               
            </div>
          </div>
        </div>
         
        <client-only-stub>
          <div
            class="infinite-loading-container"
            data-v-644ea9c9=""
          >
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              <i
                class="loading-default"
                data-v-46b20d22=""
                data-v-644ea9c9=""
              />
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              No results :(
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              No more data :)
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              
        Opps, something went wrong :(
        
              <br
                data-v-644ea9c9=""
              />
               
              <button
                class="btn-try-infinite"
                data-v-644ea9c9=""
              >
                Retry
              </button>
            </div>
          </div>
        </client-only-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileSlug given an authenticated user given another profile user and badges are enabled renders 1`] = `
<div>
  <div>
    <div
      class="ds-space"
      style="margin-bottom: 32px;"
    />
     
    <div
      class="ds-flex"
      style="margin-left: -12px; margin-right: -12px;"
    >
      <div
        class="ds-flex-item"
        style="flex-basis: 100%; width: 100%; padding-left: 12px; padding-right: 12px; margin-bottom: 24px;"
      >
        <article
          class="base-card"
          style="position: relative; height: auto; overflow: visible;"
        >
          <div
            class="profile-page-avatar profile-avatar --large --no-image"
          >
            <span
              class="initials"
            >
              BTB
            </span>
             
            <!---->
             
            <!---->
          </div>
           
          <client-only-stub>
            <v-popover-stub
              autohide="true"
              class="content-menu user-content-menu"
              container="body"
              delay="0"
              handleresize="true"
              offset="5"
              openclass="open"
              opengroup="0"
              placement="bottom-end"
              popoverarrowclass="tooltip-arrow popover-arrow"
              popoverbaseclass="tooltip popover"
              popoverclass="vue-popover-theme"
              popoverinnerclass="tooltip-inner popover-inner"
              popoverwrapperclass="wrapper"
              popperoptions="[object Object]"
              trigger="manual"
            >
              <button
                aria-label="actions.menu"
                class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
                data-appearance="outline"
                data-test="content-menu-button"
                data-variant="primary"
                type="button"
              >
                <span
                  class="inline-flex items-center"
                >
                  <span
                    class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <span
                      aria-hidden="true"
                      class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                    >
                      <svg
                        fill="currentColor"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16 6c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 14c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 22c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </button>
               
              <div>
                <div
                  class="content-menu-popover"
                >
                  <nav
                    class="ds-menu"
                  >
                    <ul
                      class="ds-menu-list"
                    >
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          exact="true"
                          to="/"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            report.user.title
          
                        </router-link-stub>
                        <!---->
                      </li>
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          exact="true"
                          to="/"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            disable.user.title
          
                        </router-link-stub>
                        <!---->
                      </li>
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          exact="true"
                          to="/"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            settings.muted-users.mute
          
                        </router-link-stub>
                        <!---->
                      </li>
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          exact="true"
                          to="/"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            settings.blocked-users.block
          
                        </router-link-stub>
                        <!---->
                      </li>
                    </ul>
                  </nav>
                </div>
              </div>
            </v-popover-stub>
          </client-only-stub>
           
          <div
            class="ds-space"
            style="margin-top: 16px; margin-bottom: 16px;"
          >
            <h3
              class="ds-heading ds-heading-h3 ds-heading-align-center ds-heading-no-margin"
            >
              
            Bob the builder
          
            </h3>
             
            <p
              class="ds-text ds-text-soft ds-text-center"
            >
              
            @undefined
          
            </p>
             
            <div
              class="location-info size-small"
            >
              <div
                class="location"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 3c4.959 0 9 4.042 9 9 0 1.406-0.57 3.020-1.344 4.781s-1.77 3.631-2.781 5.375c-2.023 3.488-4.063 6.406-4.063 6.406l-0.813 1.188-0.813-1.188s-2.039-2.918-4.063-6.406c-1.012-1.744-2.007-3.613-2.781-5.375s-1.344-3.375-1.344-4.781c0-4.958 4.041-9 9-9zM16 5c-3.877 0-7 3.123-7 7 0 0.803 0.43 2.316 1.156 3.969s1.73 3.484 2.719 5.188c1.572 2.71 2.546 4.144 3.125 5 0.579-0.856 1.553-2.29 3.125-5 0.988-1.704 1.993-3.535 2.719-5.188s1.156-3.166 1.156-3.969c0-3.877-3.122-7-7-7zM16 10c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
                    />
                  </svg>
                </span>
                
    Berlin
  
              </div>
               
              <div
                class="distance"
              >
                
    location.distance
  
              </div>
            </div>
             
            <p
              class="ds-text ds-text-size-small ds-text-soft ds-text-center"
            >
              
            profile.memberSince 
          
            </p>
          </div>
           
          <div
            class="ds-space"
            style="margin-top: 8px; margin-bottom: 8px;"
          >
            <!---->
             
            <div
              class="hc-badges"
            >
              <div
                class="hc-badge-container"
              >
                <img
                  class="hc-badge"
                  src="/api/path/to/icon-bv1"
                  title="verified"
                />
              </div>
              <div
                class="hc-badge-container"
              >
                <img
                  class="hc-badge"
                  src="/api/path/to/icon-bt1"
                  title="a trophy"
                />
              </div>
              <div
                class="hc-badge-container"
              >
                <img
                  class="hc-badge"
                  src="/api/path/to/icon-bt2"
                  title="no trophy"
                />
              </div>
            </div>
          </div>
           
          <div
            class="ds-flex"
          >
            <div
              class="ds-flex-item"
              style="flex-grow: 1; flex-shrink: 0; flex-basis: 0px;"
            >
              <client-only-stub>
                <div
                  class="ds-number ds-number-size-x-large"
                >
                  <p
                    class="ds-text ds-number-count ds-text-size-x-large"
                    style="margin-bottom: 0px;"
                  >
                    <span>
                      <client-only-stub
                        placeholder="0"
                        tag="span"
                      >
                        <span>
                          
  0

                        </span>
                      </client-only-stub>
                    </span>
                  </p>
                  <p
                    class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                  >
                    
    profile.followers
  
                  </p>
                </div>
              </client-only-stub>
            </div>
             
            <div
              class="ds-flex-item"
              style="flex-grow: 1; flex-shrink: 0; flex-basis: 0px;"
            >
              <client-only-stub>
                <div
                  class="ds-number ds-number-size-x-large"
                >
                  <p
                    class="ds-text ds-number-count ds-text-size-x-large"
                    style="margin-bottom: 0px;"
                  >
                    <span>
                      <client-only-stub
                        placeholder="0"
                        tag="span"
                      >
                        <span>
                          
  0

                        </span>
                      </client-only-stub>
                    </span>
                  </p>
                  <p
                    class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                  >
                    
    profile.following
  
                  </p>
                </div>
              </client-only-stub>
            </div>
          </div>
           
          <div
            class="action-buttons"
          >
            <!---->
             
            <!---->
             
            <button
              class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[36px] min-w-[36px] px-[16px] py-0 text-[15px] leading-[normal] rounded-[5px] align-middle w-full border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)]"
              data-appearance="outline"
              data-test="follow-btn"
              data-variant="primary"
              type="button"
            >
              <span
                class="inline-flex items-center gap-2"
              >
                <span
                  class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current -ml-1"
                >
                  <span
                    class="base-icon"
                  >
                    <!---->
                  </span>
                </span>
                
  followButton.follow

              </span>
            </button>
             
            <button
              class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[36px] min-w-[36px] px-[16px] py-0 text-[15px] leading-[normal] rounded-[5px] align-middle w-full border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] has-tooltip"
              data-appearance="outline"
              data-original-title="null"
              data-variant="primary"
              type="button"
            >
              <span
                class="inline-flex items-center gap-2"
              >
                <span
                  class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current -ml-1"
                >
                  <span
                    aria-hidden="true"
                    class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <svg
                      fill="currentColor"
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.23,24.91A9,9,0,0,0,22.44,9.52,8.57,8.57,0,0,0,21,9.41a8.94,8.94,0,0,0-8.92,10.14c0,.1,0,.2,0,.29a9,9,0,0,0,.22,1l0,.11a8.93,8.93,0,0,0,.38,1l.13.28a9,9,0,0,0,.45.83l.07.14a9.13,9.13,0,0,1-2.94-.36,1,1,0,0,0-.68,0L7,24.13l.54-1.9a1,1,0,0,0-.32-1,9,9,0,0,1,11.27-14,1,1,0,0,0,1.23-1.58A10.89,10.89,0,0,0,13,3.25a11,11,0,0,0-7.5,19l-1,3.34A1,1,0,0,0,5.9,26.82l4.35-1.93a11,11,0,0,0,4.68.16A9,9,0,0,0,21,27.41a8.81,8.81,0,0,0,2.18-.27l3.41,1.52A1,1,0,0,0,28,27.48Zm-1.77-1.1a1,1,0,0,0-.32,1L25.45,26l-1.79-.8a1,1,0,0,0-.41-.09,1,1,0,0,0-.29,0,6.64,6.64,0,0,1-2,.29,7,7,0,0,1,0-14,6.65,6.65,0,0,1,1.11.09,7,7,0,0,1,3.35,12.31Z"
                      />
                      <path
                        d="M17.82 17.08H17a1 1 0 0 0 0 2h.82a1 1 0 0 0 0-2zM21.41 17.08h-.82a1 1 0 0 0 0 2h.82a1 1 0 0 0 0-2zM25 17.08h-.82a1 1 0 0 0 0 2H25a1 1 0 0 0 0-2z"
                      />
                    </svg>
                  </span>
                </span>
                
            chat.userProfileButton.label
          
              </span>
            </button>
          </div>
           
          <!---->
           
          <!---->
        </article>
         
        <div
          class="ds-space"
          style="margin-bottom: 32px;"
        />
         
        <h3
          class="ds-heading ds-heading-h3 ds-heading-soft"
          style="text-align: center; margin-bottom: 10px;"
        >
          
        profile.network.title
      
        </h3>
         
        <follow-list-stub
          type="followedBy"
          user="[object Object]"
        />
         
        <div
          class="ds-space"
          style="margin-bottom: 32px;"
        />
         
        <follow-list-stub
          type="following"
          user="[object Object]"
        />
         
        <!---->
      </div>
       
      <div
        class="ds-flex-item"
        style="flex-basis: 100%; width: 100%; padding-left: 12px; padding-right: 12px; margin-bottom: 24px;"
      >
        <div
          class="ds-grid"
          style="grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); grid-auto-rows: 20px;"
        >
          <div
            class="tab-navigation"
            style="grid-row-end: span 3; grid-column-start: 1; grid-column-end: -1;"
          >
            <article
              class="ds-tab-nav base-card"
            >
              <ul
                class="Tabs"
              >
                <li
                  class="Tabs__tab pointer --active"
                  data-test="post-tab"
                >
                  <a
                    data-test="post-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    common.post
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
                <li
                  class="Tabs__tab pointer"
                  data-test="comment-tab"
                >
                  <a
                    data-test="comment-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    profile.commented
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
                <li
                  class="Tabs__tab pointer"
                  data-test="shout-tab"
                >
                  <a
                    data-test="shout-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    profile.shouted
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
              </ul>
               
              <!---->
            </article>
          </div>
           
          <!---->
           
          <div
            style="grid-row-end: span 4; grid-column-start: 1; grid-column-end: -1;"
          >
            <div>
              <div
                class="ds-space hc-empty ds-space-centered"
                style="margin-top: 64px; margin-bottom: 64px;"
              >
                <p
                  class="ds-text"
                >
                  <img
                    alt="Empty"
                    class="hc-empty-icon"
                    src="/img/empty/file.svg"
                    style="margin-bottom: 5px;"
                    width="80"
                  />
                   
                  <br />
                   
                  <span
                    class="ds-text hc-empty-message ds-text-softer ds-text-inline"
                    style="display: none;"
                  >
                    
        
      
                  </span>
                </p>
              </div>
               
            </div>
          </div>
        </div>
         
        <client-only-stub>
          <div
            class="infinite-loading-container"
            data-v-644ea9c9=""
          >
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              <i
                class="loading-default"
                data-v-46b20d22=""
                data-v-644ea9c9=""
              />
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              No results :(
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              No more data :)
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              
        Opps, something went wrong :(
        
              <br
                data-v-644ea9c9=""
              />
               
              <button
                class="btn-try-infinite"
                data-v-644ea9c9=""
              >
                Retry
              </button>
            </div>
          </div>
        </client-only-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileSlug given an authenticated user given the logged in user as profile user and badges are disabled renders 1`] = `
<div>
  <div>
    <div
      class="ds-space"
      style="margin-bottom: 32px;"
    />
     
    <div
      class="ds-flex"
      style="margin-left: -12px; margin-right: -12px;"
    >
      <div
        class="ds-flex-item"
        style="flex-basis: 100%; width: 100%; padding-left: 12px; padding-right: 12px; margin-bottom: 24px;"
      >
        <article
          class="base-card"
          style="position: relative; height: auto; overflow: visible;"
        >
          <div
            class="avatar-uploader"
          >
            <div
              class="vue-dropzone dropzone"
              id="customdropzone"
              options="[object Object]"
            >
              <div
                class="dz-message"
              >
                <div
                  class="dz-message"
                >
                  <div
                    class="profile-page-avatar profile-avatar --large --no-image"
                  >
                    <span
                      class="initials"
                    >
                      BTB
                    </span>
                     
                    <!---->
                     
                    <!---->
                  </div>
                   
                  <div
                    class="avatar-attachments-upload-area"
                  >
                    <div
                      class="avatar-drag-marker"
                    >
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <client-only-stub>
            <v-popover-stub
              autohide="true"
              class="content-menu user-content-menu"
              container="body"
              delay="0"
              handleresize="true"
              offset="5"
              openclass="open"
              opengroup="0"
              placement="bottom-end"
              popoverarrowclass="tooltip-arrow popover-arrow"
              popoverbaseclass="tooltip popover"
              popoverclass="vue-popover-theme"
              popoverinnerclass="tooltip-inner popover-inner"
              popoverwrapperclass="wrapper"
              popperoptions="[object Object]"
              trigger="manual"
            >
              <button
                aria-label="actions.menu"
                class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
                data-appearance="outline"
                data-test="content-menu-button"
                data-variant="primary"
                type="button"
              >
                <span
                  class="inline-flex items-center"
                >
                  <span
                    class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <span
                      aria-hidden="true"
                      class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                    >
                      <svg
                        fill="currentColor"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16 6c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 14c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 22c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </button>
               
              <div>
                <div
                  class="content-menu-popover"
                >
                  <nav
                    class="ds-menu"
                  >
                    <ul
                      class="ds-menu-list"
                    >
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          to="/settings"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            settings.name
          
                        </router-link-stub>
                        <!---->
                      </li>
                    </ul>
                  </nav>
                </div>
              </div>
            </v-popover-stub>
          </client-only-stub>
           
          <div
            class="ds-space"
            style="margin-top: 16px; margin-bottom: 16px;"
          >
            <h3
              class="ds-heading ds-heading-h3 ds-heading-align-center ds-heading-no-margin"
            >
              
            Bob the builder
          
            </h3>
             
            <p
              class="ds-text ds-text-soft ds-text-center"
            >
              
            @undefined
          
            </p>
             
            <div
              class="location-info size-small"
            >
              <div
                class="location"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 3c4.959 0 9 4.042 9 9 0 1.406-0.57 3.020-1.344 4.781s-1.77 3.631-2.781 5.375c-2.023 3.488-4.063 6.406-4.063 6.406l-0.813 1.188-0.813-1.188s-2.039-2.918-4.063-6.406c-1.012-1.744-2.007-3.613-2.781-5.375s-1.344-3.375-1.344-4.781c0-4.958 4.041-9 9-9zM16 5c-3.877 0-7 3.123-7 7 0 0.803 0.43 2.316 1.156 3.969s1.73 3.484 2.719 5.188c1.572 2.71 2.546 4.144 3.125 5 0.579-0.856 1.553-2.29 3.125-5 0.988-1.704 1.993-3.535 2.719-5.188s1.156-3.166 1.156-3.969c0-3.877-3.122-7-7-7zM16 10c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
                    />
                  </svg>
                </span>
                
    Paris
  
              </div>
               
              <!---->
            </div>
             
            <p
              class="ds-text ds-text-size-small ds-text-soft ds-text-center"
            >
              
            profile.memberSince 
          
            </p>
          </div>
           
          <!---->
           
          <div
            class="ds-flex"
          >
            <div
              class="ds-flex-item"
              style="flex-grow: 1; flex-shrink: 0; flex-basis: 0px;"
            >
              <client-only-stub>
                <div
                  class="ds-number ds-number-size-x-large"
                >
                  <p
                    class="ds-text ds-number-count ds-text-size-x-large"
                    style="margin-bottom: 0px;"
                  >
                    <span>
                      <client-only-stub
                        placeholder="0"
                        tag="span"
                      >
                        <span>
                          
  0

                        </span>
                      </client-only-stub>
                    </span>
                  </p>
                  <p
                    class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                  >
                    
    profile.followers
  
                  </p>
                </div>
              </client-only-stub>
            </div>
             
            <div
              class="ds-flex-item"
              style="flex-grow: 1; flex-shrink: 0; flex-basis: 0px;"
            >
              <client-only-stub>
                <div
                  class="ds-number ds-number-size-x-large"
                >
                  <p
                    class="ds-text ds-number-count ds-text-size-x-large"
                    style="margin-bottom: 0px;"
                  >
                    <span>
                      <client-only-stub
                        placeholder="0"
                        tag="span"
                      >
                        <span>
                          
  0

                        </span>
                      </client-only-stub>
                    </span>
                  </p>
                  <p
                    class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                  >
                    
    profile.following
  
                  </p>
                </div>
              </client-only-stub>
            </div>
          </div>
           
          <!---->
           
          <!---->
           
          <!---->
        </article>
         
        <div
          class="ds-space"
          style="margin-bottom: 32px;"
        />
         
        <h3
          class="ds-heading ds-heading-h3 ds-heading-soft"
          style="text-align: center; margin-bottom: 10px;"
        >
          
        profile.network.title
      
        </h3>
         
        <follow-list-stub
          type="followedBy"
          user="[object Object]"
        />
         
        <div
          class="ds-space"
          style="margin-bottom: 32px;"
        />
         
        <follow-list-stub
          type="following"
          user="[object Object]"
        />
         
        <!---->
      </div>
       
      <div
        class="ds-flex-item"
        style="flex-basis: 100%; width: 100%; padding-left: 12px; padding-right: 12px; margin-bottom: 24px;"
      >
        <div
          class="ds-grid"
          style="grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); grid-auto-rows: 20px;"
        >
          <div
            class="tab-navigation"
            style="grid-row-end: span 3; grid-column-start: 1; grid-column-end: -1;"
          >
            <article
              class="ds-tab-nav base-card"
            >
              <ul
                class="Tabs"
              >
                <li
                  class="Tabs__tab pointer --active"
                  data-test="post-tab"
                >
                  <a
                    data-test="post-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    common.post
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
                <li
                  class="Tabs__tab pointer"
                  data-test="comment-tab"
                >
                  <a
                    data-test="comment-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    profile.commented
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
                <li
                  class="Tabs__tab pointer"
                  data-test="shout-tab"
                >
                  <a
                    data-test="shout-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    profile.shouted
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
              </ul>
               
              <!---->
            </article>
          </div>
           
          <div
            style="grid-row-end: span 2; grid-column-start: 1; grid-column-end: -1;"
          >
            <div
              class="profile-post-add-button-container"
            >
              <nuxt-link-stub
                aria-label="contribution.newPost"
                class="profile-post-add-button os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] shadow-[inset_0_0_0_1px_rgba(0,0,0,0.05)] disabled:bg-[var(--color-disabled)] disabled:text-[var(--color-disabled-contrast)] disabled:border-[var(--color-disabled)] disabled:shadow-[inset_0_0_0_1px_transparent] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle bg-[var(--color-primary)] text-[var(--color-primary-contrast)] border-[var(--color-primary)] hover:bg-[var(--color-primary-hover)] hover:border-[var(--color-primary-hover)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px] profile-post-add-button has-tooltip"
                data-appearance="filled"
                data-original-title="null"
                data-variant="primary"
                to="[object Object]"
              >
                <span
                  class="inline-flex items-center"
                >
                  <span
                    class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <span
                      aria-hidden="true"
                      class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                    >
                      <svg
                        fill="currentColor"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 5h2v10h10v2h-10v10h-2v-10h-10v-2h10v-10z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </nuxt-link-stub>
            </div>
          </div>
           
          <div
            style="grid-row-end: span 4; grid-column-start: 1; grid-column-end: -1;"
          >
            <div>
              <div
                class="ds-space hc-empty ds-space-centered"
                style="margin-top: 64px; margin-bottom: 64px;"
              >
                <p
                  class="ds-text"
                >
                  <img
                    alt="Empty"
                    class="hc-empty-icon"
                    src="/img/empty/file.svg"
                    style="margin-bottom: 5px;"
                    width="80"
                  />
                   
                  <br />
                   
                  <span
                    class="ds-text hc-empty-message ds-text-softer ds-text-inline"
                    style="display: none;"
                  >
                    
        
      
                  </span>
                </p>
              </div>
               
            </div>
          </div>
        </div>
         
        <client-only-stub>
          <div
            class="infinite-loading-container"
            data-v-644ea9c9=""
          >
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              <i
                class="loading-default"
                data-v-46b20d22=""
                data-v-644ea9c9=""
              />
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              No results :(
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              No more data :)
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              
        Opps, something went wrong :(
        
              <br
                data-v-644ea9c9=""
              />
               
              <button
                class="btn-try-infinite"
                data-v-644ea9c9=""
              >
                Retry
              </button>
            </div>
          </div>
        </client-only-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileSlug given an authenticated user given the logged in user as profile user and badges are enabled renders 1`] = `
<div>
  <div>
    <div
      class="ds-space"
      style="margin-bottom: 32px;"
    />
     
    <div
      class="ds-flex"
      style="margin-left: -12px; margin-right: -12px;"
    >
      <div
        class="ds-flex-item"
        style="flex-basis: 100%; width: 100%; padding-left: 12px; padding-right: 12px; margin-bottom: 24px;"
      >
        <article
          class="base-card"
          style="position: relative; height: auto; overflow: visible;"
        >
          <div
            class="avatar-uploader"
          >
            <div
              class="vue-dropzone dropzone"
              id="customdropzone"
              options="[object Object]"
            >
              <div
                class="dz-message"
              >
                <div
                  class="dz-message"
                >
                  <div
                    class="profile-page-avatar profile-avatar --large --no-image"
                  >
                    <span
                      class="initials"
                    >
                      BTB
                    </span>
                     
                    <!---->
                     
                    <!---->
                  </div>
                   
                  <div
                    class="avatar-attachments-upload-area"
                  >
                    <div
                      class="avatar-drag-marker"
                    >
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <client-only-stub>
            <v-popover-stub
              autohide="true"
              class="content-menu user-content-menu"
              container="body"
              delay="0"
              handleresize="true"
              offset="5"
              openclass="open"
              opengroup="0"
              placement="bottom-end"
              popoverarrowclass="tooltip-arrow popover-arrow"
              popoverbaseclass="tooltip popover"
              popoverclass="vue-popover-theme"
              popoverinnerclass="tooltip-inner popover-inner"
              popoverwrapperclass="wrapper"
              popperoptions="[object Object]"
              trigger="manual"
            >
              <button
                aria-label="actions.menu"
                class="os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] bg-transparent shadow-none disabled:border-[var(--color-disabled)] disabled:text-[var(--color-disabled)] h-[26px] min-w-[26px] text-[12px] leading-[normal] tracking-[0.6px] overflow-hidden whitespace-nowrap align-middle border-[var(--color-primary)] text-[var(--color-primary)] hover:bg-[var(--color-primary)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[26px]"
                data-appearance="outline"
                data-test="content-menu-button"
                data-variant="primary"
                type="button"
              >
                <span
                  class="inline-flex items-center"
                >
                  <span
                    class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <span
                      aria-hidden="true"
                      class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                    >
                      <svg
                        fill="currentColor"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16 6c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 14c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2zM16 22c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </button>
               
              <div>
                <div
                  class="content-menu-popover"
                >
                  <nav
                    class="ds-menu"
                  >
                    <ul
                      class="ds-menu-list"
                    >
                      <li
                        class="ds-menu-item ds-menu-item-level-0"
                      >
                        <router-link-stub
                          class="ds-menu-item-link"
                          to="/settings"
                        >
                          <span
                            class="base-icon"
                          >
                            <!---->
                          </span>
                          
            settings.name
          
                        </router-link-stub>
                        <!---->
                      </li>
                    </ul>
                  </nav>
                </div>
              </div>
            </v-popover-stub>
          </client-only-stub>
           
          <div
            class="ds-space"
            style="margin-top: 16px; margin-bottom: 16px;"
          >
            <h3
              class="ds-heading ds-heading-h3 ds-heading-align-center ds-heading-no-margin"
            >
              
            Bob the builder
          
            </h3>
             
            <p
              class="ds-text ds-text-soft ds-text-center"
            >
              
            @undefined
          
            </p>
             
            <div
              class="location-info size-small"
            >
              <div
                class="location"
              >
                <span
                  aria-hidden="true"
                  class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                >
                  <svg
                    fill="currentColor"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 3c4.959 0 9 4.042 9 9 0 1.406-0.57 3.020-1.344 4.781s-1.77 3.631-2.781 5.375c-2.023 3.488-4.063 6.406-4.063 6.406l-0.813 1.188-0.813-1.188s-2.039-2.918-4.063-6.406c-1.012-1.744-2.007-3.613-2.781-5.375s-1.344-3.375-1.344-4.781c0-4.958 4.041-9 9-9zM16 5c-3.877 0-7 3.123-7 7 0 0.803 0.43 2.316 1.156 3.969s1.73 3.484 2.719 5.188c1.572 2.71 2.546 4.144 3.125 5 0.579-0.856 1.553-2.29 3.125-5 0.988-1.704 1.993-3.535 2.719-5.188s1.156-3.166 1.156-3.969c0-3.877-3.122-7-7-7zM16 10c1.105 0 2 0.895 2 2s-0.895 2-2 2-2-0.895-2-2 0.895-2 2-2z"
                    />
                  </svg>
                </span>
                
    Paris
  
              </div>
               
              <!---->
            </div>
             
            <p
              class="ds-text ds-text-size-small ds-text-soft ds-text-center"
            >
              
            profile.memberSince 
          
            </p>
          </div>
           
          <div
            class="ds-space"
            style="margin-top: 8px; margin-bottom: 8px;"
          >
            <a
              class="badge-edit-link"
              href="/settings/badges"
            >
              <div
                class="hc-badges"
              >
                <div
                  class="hc-badge-container"
                >
                  <img
                    class="hc-badge"
                    src="/api/path/to/icon-bv1"
                    title="verified"
                  />
                </div>
                <div
                  class="hc-badge-container"
                >
                  <img
                    class="hc-badge"
                    src="/api/path/to/icon-bt1"
                    title="a trophy"
                  />
                </div>
                <div
                  class="hc-badge-container"
                >
                  <img
                    class="hc-badge"
                    src="/api/path/to/icon-bt2"
                    title="no trophy"
                  />
                </div>
              </div>
            </a>
             
            <!---->
          </div>
           
          <div
            class="ds-flex"
          >
            <div
              class="ds-flex-item"
              style="flex-grow: 1; flex-shrink: 0; flex-basis: 0px;"
            >
              <client-only-stub>
                <div
                  class="ds-number ds-number-size-x-large"
                >
                  <p
                    class="ds-text ds-number-count ds-text-size-x-large"
                    style="margin-bottom: 0px;"
                  >
                    <span>
                      <client-only-stub
                        placeholder="0"
                        tag="span"
                      >
                        <span>
                          
  0

                        </span>
                      </client-only-stub>
                    </span>
                  </p>
                  <p
                    class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                  >
                    
    profile.followers
  
                  </p>
                </div>
              </client-only-stub>
            </div>
             
            <div
              class="ds-flex-item"
              style="flex-grow: 1; flex-shrink: 0; flex-basis: 0px;"
            >
              <client-only-stub>
                <div
                  class="ds-number ds-number-size-x-large"
                >
                  <p
                    class="ds-text ds-number-count ds-text-size-x-large"
                    style="margin-bottom: 0px;"
                  >
                    <span>
                      <client-only-stub
                        placeholder="0"
                        tag="span"
                      >
                        <span>
                          
  0

                        </span>
                      </client-only-stub>
                    </span>
                  </p>
                  <p
                    class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                  >
                    
    profile.following
  
                  </p>
                </div>
              </client-only-stub>
            </div>
          </div>
           
          <!---->
           
          <!---->
           
          <!---->
        </article>
         
        <div
          class="ds-space"
          style="margin-bottom: 32px;"
        />
         
        <h3
          class="ds-heading ds-heading-h3 ds-heading-soft"
          style="text-align: center; margin-bottom: 10px;"
        >
          
        profile.network.title
      
        </h3>
         
        <follow-list-stub
          type="followedBy"
          user="[object Object]"
        />
         
        <div
          class="ds-space"
          style="margin-bottom: 32px;"
        />
         
        <follow-list-stub
          type="following"
          user="[object Object]"
        />
         
        <!---->
      </div>
       
      <div
        class="ds-flex-item"
        style="flex-basis: 100%; width: 100%; padding-left: 12px; padding-right: 12px; margin-bottom: 24px;"
      >
        <div
          class="ds-grid"
          style="grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); grid-auto-rows: 20px;"
        >
          <div
            class="tab-navigation"
            style="grid-row-end: span 3; grid-column-start: 1; grid-column-end: -1;"
          >
            <article
              class="ds-tab-nav base-card"
            >
              <ul
                class="Tabs"
              >
                <li
                  class="Tabs__tab pointer --active"
                  data-test="post-tab"
                >
                  <a
                    data-test="post-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    common.post
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
                <li
                  class="Tabs__tab pointer"
                  data-test="comment-tab"
                >
                  <a
                    data-test="comment-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    profile.commented
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
                <li
                  class="Tabs__tab pointer"
                  data-test="shout-tab"
                >
                  <a
                    data-test="shout-tab-click"
                  >
                    <div
                      class="ds-space"
                      style="margin-top: 16px; margin-bottom: 16px;"
                    >
                      <client-only-stub
                        placeholder="client-only.loading"
                      >
                        <div
                          class="ds-number ds-number-size-x-large"
                        >
                          <p
                            class="ds-text ds-number-count ds-text-size-x-large"
                            style="margin-bottom: 0px;"
                          >
                            <span>
                              <client-only-stub
                                placeholder="0"
                                tag="span"
                              >
                                <span>
                                  
  0

                                </span>
                              </client-only-stub>
                            </span>
                          </p>
                          <p
                            class="ds-text ds-number-label ds-text-size-small ds-text-soft"
                          >
                            
    profile.shouted
  
                          </p>
                        </div>
                      </client-only-stub>
                    </div>
                  </a>
                </li>
              </ul>
               
              <!---->
            </article>
          </div>
           
          <div
            style="grid-row-end: span 2; grid-column-start: 1; grid-column-end: -1;"
          >
            <div
              class="profile-post-add-button-container"
            >
              <nuxt-link-stub
                aria-label="contribution.newPost"
                class="profile-post-add-button os-button inline-flex items-center justify-center [white-space-collapse:collapse] relative appearance-none font-semibold tracking-[0.05em] transition-[color,background-color] duration-[80ms] ease-[cubic-bezier(0.25,0.46,0.45,0.94)] cursor-pointer select-none border-[0.8px] border-solid focus:outline-1 disabled:pointer-events-none disabled:cursor-default focus:outline-dashed focus:outline-[var(--color-primary)] shadow-[inset_0_0_0_1px_rgba(0,0,0,0.05)] disabled:bg-[var(--color-disabled)] disabled:text-[var(--color-disabled-contrast)] disabled:border-[var(--color-disabled)] disabled:shadow-[inset_0_0_0_1px_transparent] h-[36px] min-w-[36px] text-[15px] leading-[normal] align-middle bg-[var(--color-primary)] text-[var(--color-primary-contrast)] border-[var(--color-primary)] hover:bg-[var(--color-primary-hover)] hover:border-[var(--color-primary-hover)] hover:text-[var(--color-primary-contrast)] active:bg-[var(--color-primary-active)] active:border-[var(--color-primary-active)] active:text-[var(--color-primary-contrast)] rounded-full p-0 w-[36px] profile-post-add-button has-tooltip"
                data-appearance="filled"
                data-original-title="null"
                data-variant="primary"
                to="[object Object]"
              >
                <span
                  class="inline-flex items-center"
                >
                  <span
                    class="os-button__icon inline-flex items-center shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                  >
                    <span
                      aria-hidden="true"
                      class="os-icon inline-flex items-center align-bottom shrink-0 h-[1.2em] [&>svg]:h-full [&>svg]:w-auto [&>svg]:fill-current"
                    >
                      <svg
                        fill="currentColor"
                        viewBox="0 0 32 32"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 5h2v10h10v2h-10v10h-2v-10h-10v-2h10v-10z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </nuxt-link-stub>
            </div>
          </div>
           
          <div
            style="grid-row-end: span 4; grid-column-start: 1; grid-column-end: -1;"
          >
            <div>
              <div
                class="ds-space hc-empty ds-space-centered"
                style="margin-top: 64px; margin-bottom: 64px;"
              >
                <p
                  class="ds-text"
                >
                  <img
                    alt="Empty"
                    class="hc-empty-icon"
                    src="/img/empty/file.svg"
                    style="margin-bottom: 5px;"
                    width="80"
                  />
                   
                  <br />
                   
                  <span
                    class="ds-text hc-empty-message ds-text-softer ds-text-inline"
                    style="display: none;"
                  >
                    
        
      
                  </span>
                </p>
              </div>
               
            </div>
          </div>
        </div>
         
        <client-only-stub>
          <div
            class="infinite-loading-container"
            data-v-644ea9c9=""
          >
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              <i
                class="loading-default"
                data-v-46b20d22=""
                data-v-644ea9c9=""
              />
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              No results :(
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              No more data :)
            </div>
             
            <div
              class="infinite-status-prompt"
              data-v-644ea9c9=""
              style="color: rgb(102, 102, 102); font-size: 14px; padding: 10px 0px; display: none;"
            >
              
        Opps, something went wrong :(
        
              <br
                data-v-644ea9c9=""
              />
               
              <button
                class="btn-try-infinite"
                data-v-644ea9c9=""
              >
                Retry
              </button>
            </div>
          </div>
        </client-only-stub>
      </div>
    </div>
  </div>
</div>
`;
